--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,32 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style: none;
+  padding: 8px;
+}
+.country-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.country-item {
+  display: flex;
+}
+
+.country-flag {
+  display: block;
+  width: 80px;
+}
+
+.country-name {
+  font-size: 18px;
+  font-weight: 600;
+  margin-left: 8px;
+}
+
+.is-card {
+  font-size: 28px;
+  font-weight: 600;
+}
